# balance-checker-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  auth.py  bot.py  config.py  docker-compose.yml  main.py  manage_db.py  pyproject.toml  query_balance.py  requirements.txt  validator.py
.github/workflows/: ci.yml
balance_checker/: bot.py  config.py  main.py
balance_checker_bot/: bot.py  config.py  main.py
balance_checker_bot/dependencies/: auth_dependencies.py  redis_client.py  redis_connection.py
balance_checker_bot/monzo_api/: oauth.py  operations.py
docker/: .env-docker.template  supervisord.conf
test/: conftest.py  test_main.py
test/dependencies/: test_auth_dependencies.py  test_redis_client.py
test/monzo_api/: test_oauth.py
