[tool.poetry]
name = "balance-checker-bot"
version = "0.2.0"
description = ""
authors = ["Anson <58594437+AnsonDev42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
pydantic = "^2.5.3"
requests = "^2.31.0"
pre-commit = "^3.6.0"
fastapi = "^0.108.0"
requests-oauthlib = "^1.3.1"
itsdangerous = "^2.1.2"
uvicorn = "^0.25.0"
aioredis = "2.0.0"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
combine-as-imports = true
case-sensitive = true
force-single-line = true
